Fixed bug #38579 require_once/include_once optimization causes files to be loaded multiple times.